# gpupsat

./: .gitignore  README.md
src/: CMakeLists.txt  cuda_test.cu
src/BCPStrategy/: ClauseListStructure.cu  WatchedClausesList.cu  WatchedClausesList.cuh
src/ClauseLearning/: LearntClauseRepository.cu  LearntClauseRepository.cuh  LearntClausesManager.cu  LearntClausesManager.cuh
src/ConflictAnalysis/: CUDAListGraph.cu  CUDAListGraph.cuh  ConflictAnalyzer.cu  ConflictAnalyzer.cuh  ConflictAnalyzerFullSearchSpace.cu  ConflictAnalyzerFullSearchSpace.cuh  ConflictAnalyzerWithWatchedLits.cu  ConflictAnalyzerWithWatchedLits.cuh  GraphAnalyzer.cu  GraphAnalyzer.cuh  GraphStructure.cu
src/ConflictAnalysis/UIP-algorithms/: UIPFinder.cu  UIPFinder.cuh
src/DecisionStrategy/: Heap.cu  Heap.cuh  Test.cu  Test2.cu  VSIDS.cu  VSIDS.cuh  VarIndexedVector.cu
src/ErrorHandler/: CudaMemoryErrorHandler.cu  CudaMemoryErrorHandler.cuh
src/FileManager/: CnfReader.cpp  CnfReader.h  FileUtils.cu  FileUtils.cuh  FormulaData.cu  FormulaData.cuh  ParametersManager.cpp  ParametersManager.h  Version.h
src/JobsManager/: JobChooser.cu  JobChooser.cuh  MaxClauseJobChooser.cuh  SimpleJobChooser.cu  SimpleJobChooser.cuh  Test.cu  VariableChooser.cu  VariableChooser.cuh
src/Preprocessing/: RepeatedLiteralsRemover.cu  RepeatedLiteralsRemover.cuh  UnaryClausesRemover.cu  UnaryClausesRemover.cuh
src/Restarts/: GeometricRestartsManager.cu  GeometricRestartsManager.cuh  RestartsManager.cuh
src/SATSolver/: Backtracker.cu  Backtracker.cuh  Configs.cuh  DataToDevice.cu  DataToDevice.cuh  DecisionMaker.cu  DecisionMaker.cuh  JobsQueue.cu  JobsQueue.cuh  Parallelizer.cu  Parallelizer.cuh  Results.cu  Results.cuh  SATSolver.cu  SATSolver.cuh  SolverTypes.cu  SolverTypes.cuh  VariablesStateHandler.cu  VariablesStateHandler.cuh  main.cu  mkJob_dev.cu  mkJob_dev.cuh
src/Statistics/: RuntimeStatistics.cu  RuntimeStatistics.cuh  StatisticsCalculator.cuh
src/UnitTesting/: TestConfigs.cuh  Tester.cu  Tester.cuh  main.cu
src/UnitTesting/BCPStrategy/: WatchedClausesListTester.cu  WatchedClausesListTester.cuh
src/UnitTesting/ClauseLearning/: LearntClausesManagerTester.cu  LearntClausesManagerTester.cuh
src/UnitTesting/ConflictAnalysis/: CUDAListGraphTester.cu  CUDAListGraphTester.cuh  ConflictAnalyzerGenericTester.cu  ConflictAnalyzerGenericTester.cuh  ConflictAnalyzerWithWatchedLitsTester.cu  ConflictAnalyzerWithWatchedLitsTester.cuh  PropagationTester.cu  PropagationTester.cuh
src/UnitTesting/SATSolver/: BacktrackerTester.cu  BacktrackerTester.cuh
src/UnitTesting/Statistics/: RuntimeStatisticsTester.cu  RuntimeStatisticsTester.cuh
src/UnitTesting/Utils/: GPULinkedListTester.cu  GPULinkedListTester.cuh  NodesRepositoryTester.cu  NodesRepositoryTester.cuh  StringUtils.cu  StringUtils.cuh
src/Utils/: CUDAClauseVec.cu  CUDAClauseVec.cuh  GPULinkedList.cuh  GPUStaticVec.cuh  GPUVec.cuh  NodesRepository.cuh  Stopwatch.cuh
tests/cnf/: sat_4v_simple.cnf  sat_5v_chain.cnf  sat_8v_random.cnf  unsat_3v_complete.cnf  unsat_5v_chain.cnf  unsat_php_3_2.cnf
vs/gpusatsolver/: gpusatsolver.sln  gpusatsolver.vcxproj  gpusatsolver.vcxproj.filters
vs/unit-tests/: unit-tests.vcxproj  unit-tests.vcxproj.filters
